Added style.css,app.js files and did HTML page

--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+         <h1 class="header_title">
+             Chat Emulator
+         </h1>
+    </header>
+    <main class="chat">
+        <container class="messeges">
+            <div class="messege__item mes__item1">
+                <p class="messege__text">Hello</p>
+                <a href="#" class="delete__messege">&#10005</a>
+            </div>
+            <div class="messege__item mes__item1">
+                <p class="messege__text">How are you?</p>
+                <a href="#" class="delete__messege">&#10005</a>
+            </div>
+        </container>
+        <contsiner class="inputs">
+            <form action="get" class="send">
+                <input type="button" value="Send">
+                <input type="textArea" class="text">
+            </form>
+        </contsiner>
+    </main>
+    <footer class="footer">
+        Work: Ivan Bieliaiev
+    </footer>
 </body>
 </html>
