Connect js for page and complete basic task for chat

--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -29,12 +29,10 @@
             </div>
         </div>
         <div class="inputs">
-            <form action="get" class="send">
-                <input type="textArea" class="input__text">
-                <input type="button" value="Send" class="input__button">
-            </form>
+            <input type="textArea" class="input__text">
+            <input type="button" value="Send" class="input__button">
         </div>
     </main>
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js"></script>
 </body>
 </html>
