added placeholder to input

--- a/homeworks/vladyslav.kovalov_kovalov/2-dom/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/2-dom/index.html
@@ -23,6 +23,7 @@
                         <input
                             type="text"
                             class="message-form__input"
+                            placeholder="Type your message..."
                             data-message-input
                         />
                         <button
