--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title>2-dom</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
 </head>
 <body>
-<ul class="main-box">
+<ul class="main-box" data-main-box >
     <li class="main-box_msg">Hello</li>
     <li class="main-box_msg">Is anybody here?</li>
 </ul>
-<form class="new-msg-form" data-main_box action="#">
-    <input id="msg-text" class="new-msg-form_text" type="text" name="msg-text" placeholder="Type something here...">
+<form class="new-msg-form" action="#">
+    <input id="msg-text" class="new-msg-form_text" type="text" name="msg-text" placeholder="Type something here..."
+           data-send-txt>
     <label for="msg-text" hidden>Type new message here</label>
-    <button class="new-msg-form_btn">send</button>
+    <button class="new-msg-form_btn" data-send-btn>send</button>
 </form>
+<script src="main.js"></script>
 </body>
 </html>
