--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -8,31 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
-        <h1>
-            Chat Emulator
-        </h1>
-    </header>
-    <main class="chat">
+    <div class="chat">
         <div class="messeges">
             <div class="messege__item mes__item1">
                 <p class="messege__text">
                     Hello
-                    <a href="#" class="delete__button delete__button1">del</a>
                 </p>
+                <a href="#" class="delete__button delete__button1">&#9746</a>
             </div>
             <div class="messege__item mes__item2">
                 <p class="messege__text">
                     How are you?
-                    <a href="#" class="delete__button delete__button2">del</a>
                 </p>
+                <a href="#" class="delete__button delete__button2">&#9746</a>
             </div>
         </div>
         <div class="inputs">
             <input type="textArea" class="input__text">
             <input type="button" value="Send" class="input__button">
         </div>
-    </main>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
