--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="chat">
         <div class="messeges">
@@ -28,6 +30,7 @@
             <input type="button" value="Send" class="input__button">
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
