--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="inputs">
-            <input type="textArea" class="input__text">
+            <textarea type="textArea" class="input__text"></textarea>
             <input type="button" value="Send" class="input__button">
         </div>
     </div>
