All task done with additional and with BEM method

--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -11,23 +11,23 @@
 
 <body>
     <div class="chat">
-        <div class="messeges">
+        <div class="chat__messeges">
             <div class="messege__item mes__item1">
-                <p class="messege__text">
+                <p class="item__text">
                     Hello
                 </p>
-                <a href="#" class="delete__button delete__button1">&#9746</a>
+                <a href="#" class="item__delete item__del1">&#9746</a>
             </div>
             <div class="messege__item mes__item2">
-                <p class="messege__text">
+                <p class="item__text">
                     How are you?
                 </p>
-                <a href="#" class="delete__button delete__button2">&#9746</a>
+                <a href="#" class="item__delete item__del1">&#9746</a>
             </div>
         </div>
-        <div class="inputs">
-            <textarea type="textArea" class="input__text"></textarea>
-            <input type="button" value="Send" class="input__button">
+        <div class="chat__input">
+            <textarea cols="20" rows="4" class="input__text"></textarea>
+            <button class="input__button">Send</button>
         </div>
     </div>
     <script src="index.js"></script>
