--- a/homeworks/Aleksandr.Turuta_turuta7/2-dom/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/2-dom/index.html
@@ -2,22 +2,28 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>2-dom-Turuta</title>
 </head>
 <body>
 <main class="main">
-    <div class="main-window">
-        <div class="main-window-message" data-window-message></div>
+    <div class="main__window" data-main-window>
+        <div class="main__window__message" data-window-message></div>
     </div>
-    <div class="main-message">
-        <textarea class="main-textarea" data-textarea type="text" placeholder="message"></textarea>
-        <button class="main-button" data-button>Send</button>
+    <div class="main__message">
+        <textarea class="main__textarea" data-message-field type="text" placeholder="message"></textarea>
+        <button class="main__button" data-message-send>Send</button>
     </div>
 </main>
+
+<template id="template">
+    <div class="template__message" data-new-message>
+        <pre class="template__text" data-text-message></pre>
+        <button class="template__button-delete">X</button>
+    </div>
+  </template>
 <script src="script.js"></script>
 </body>
 </html>
