--- a/homeworks/roman.kushnirenko_skyprog/2-dom/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/2-dom/index.html
@@ -1,14 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-y
+<body>
+    <main class="chat">
+        <section class="chat_messages" data-all_messages>
+        </section>
 
+        <section class="chat_bottom">
+            <form class='chat_form'>
+                <textarea class='chat-form_input' data-text_input name="post_text" placeholder="Enter message..."></textarea>
+                <input type='submit' class='chat-form_submit' data-text_submit value='Send'>
+        </section>
+    </main>
 
-
+    <script src="js.js"></script>
+</body>
 
-.
-
-
-cd
-
-
-
+</html>
