add methodology BEM

--- a/homeworks/volodymyr.khrushch_Vladimior/2-dom/index.html
+++ b/homeworks/volodymyr.khrushch_Vladimior/2-dom/index.html
@@ -13,13 +13,13 @@
 <body>
     <main>
         <article class="content">
-            <section class="messageBox">
-                <ul class="myUL" data-app>
+            <section class="content__message">
+                <ul class="content__message__list" data-app>
                 </ul>
             </section>
-            <label class="inputBox">
-                <textarea type="text" class="inputMessage" data-input placeholder="Text message..."></textarea>
-                <button class="addBtn" data-btn> Send</button>
+            <label class="content__input">
+                <textarea type="text" class="content__input__field" data-input placeholder="Text message..."></textarea>
+                <button class="content__input__button" data-btn> Send</button>
             </label>
         </article>
     </main>
