Fixed bugs and resolve addition task

--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -16,13 +16,13 @@
                 <p class="item__text">
                     Hello
                 </p>
-                <a href="#" class="item__delete item__del1">&#9746</a>
+                <button class="item__delete item__del1">&#9746</button>
             </div>
             <div class="messege__item mes__item2">
                 <p class="item__text">
                     How are you?
                 </p>
-                <a href="#" class="item__delete item__del1">&#9746</a>
+                <button class="item__delete item__del1">&#9746</button>
             </div>
         </div>
         <div class="chat__input">
