--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
    <div class="container">
-       <main class="main">
-
-       </main>
+       <main class="main"></main>
        <footer class="footer">
             <input class="input" type="text" placeholder="Type something here...">
             <button class="send">send</button>                 
@@ -19,7 +17,7 @@
    </div>
 
 
-
+   
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
