--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,5 +17,6 @@
         </div>
         
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
