--- a/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/index.html
+++ b/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/index.html
@@ -16,7 +16,7 @@
                         <input type="text" id="description-message">
                     </div>
                     <div class="button-wraper">
-                        <button id="add-message-btn">Send</button>
+                        <button class="add-message-btn" id="add-message-btn">Send</button>
                     </div>
             </div>
         </div>
