Fixed acording to comments

--- a/homeworks/andrii.tkachenko_Hodr1337/2-dom/index.html
+++ b/homeworks/andrii.tkachenko_Hodr1337/2-dom/index.html
@@ -18,7 +18,7 @@
     </section>
   
     <section>
-      <input id="textArea" type="text" placeholder="Write your text" />
+      <input id="textArea" type="text" placeholder="Write your text" required/>
       <button id="but">Send</button>
     </section>
   </main>
