--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
@@ -10,8 +10,8 @@
         <h1>Мой первый чат</h1>
     </header>
     <main>
-        <div class="chatBody"></div>
-        <input type="text" class="messageInput" placeholder="Type your message">
+        <div class="chat__body"></div>
+        <input type="text" class="message__input" placeholder="Type your message">
         <button id="btn">Send</button>
     </main>
     <script src="script.js"></script>
