--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <ul class="main-box" data-main-box >
-    <li class="main-box_msg">Hello</li>
-    <li class="main-box_msg">Is anybody here?</li>
+    <li class="main-box_msg"><span class="close">&#215;</span>Hello</li>
+    <li class="main-box_msg"><span class="close">&#215;</span>Is anybody here?</li>
 </ul>
 <form class="new-msg-form" action="#">
     <input id="msg-text" class="new-msg-form_text" type="text" name="msg-text" placeholder="Type something here..."
