fix code js and name variable

--- a/homeworks/Aleksandr.Turuta_turuta7/2-dom/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/2-dom/index.html
@@ -18,7 +18,7 @@
     </div>
 </main>
 
-<template id="template">
+<template id="template" data-message-template>
     <div class="message" data-new-message>
         <pre class="message__text" data-message-text></pre>
         <button class="message__button-delete" data-button-delete-message>X</button>
