--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
@@ -7,12 +7,18 @@
 </head>
 <body>
     <header>
-        <h1>Мой первый чат</h1>
+        <h1 class="main__title">Мой первый чат</h1>
     </header>
     <main>
-        <div class="chat__body"></div>
-        <input type="text" class="message__input" placeholder="Type your message">
-        <button id="btn">Send</button>
+        <div class="chat__body" data-chat-field>
+            <template data-chat-field-element>
+                <div class="chat__message" data-message>Hello world</div>
+            </template>
+        </div>
+        <form data-input-message>
+            <input type="text" data-input-message placeholder="Type Your Message">
+            <button type="submit">Send</button>
+        </form>
     </main>
     <script src="script.js"></script>
 </body>
