--- a/homeworks/andrii.revskyi_RevskyAndrey/2-dom/index.html
+++ b/homeworks/andrii.revskyi_RevskyAndrey/2-dom/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<main class="wrap">
+<main class="main">
     <ul class="chat_area" data-list>
     </ul>
 
