--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
    <div class="container">
-       <main class="main"></main>
+       <main class="main" data-main></main>
        <footer class="footer">
-            <input class="input" type="text" placeholder="Type something here...">
-            <button class="send">send</button>                 
+           <form action="" class="input"  data-form>
+            <input class="input" data-input type="text" placeholder="Type something here...">
+           </form>            
+            <button class="send" data-send>send</button>                 
        </footer>
    </div>
 
