--- a/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/index.html
+++ b/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/index.html
@@ -10,12 +10,12 @@
 <body>
     <h1>2-Dom</h1>
         <div>
-            <div class="messages-wrapper"></div>
-                <div class="add-message-wrapper">               
-                    <div class="input-wrapper">
-                        <input type="text" id="description-message">
+            <div class="messages-chat"></div>
+                <div class="add-message-chat">               
+                    <div class="input-text">
+                        <input type="text" name="messages_input" id="description-message">
                     </div>
-                    <div class="button-wraper">
+                    <div class="button-chat">
                         <button class="add-message-btn" id="add-message-btn">Send</button>
                     </div>
             </div>
