--- a/homeworks/nikolay.krasniuk_Kingstar22/2-dom/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/2-dom/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <section class="chat">
-        <div class="wrapper">
+        <div class="chat__main">
             <div data-message class="chat__message">
 
             </div>
-            <div class="chat__send-menu">
+            <form action="#" method="post" class="chat_form">
                 <textarea class="chat__entry-textarea" data-textarea  type="text" placeholder="Type something here..." ></textarea>
-                <button data-btn class="chat__entry-btn">Send</button>
-            </div>
+                <button data-btn class="chat__entry-btn" type="submit">Send</button>
+            </form>
         </div>
     </section>
     <template data-template>
