Margin/padding/height/wigth fixing

--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
@@ -11,7 +11,7 @@
    <div class="container">
        <main class="main" data-main></main>
        <footer class="footer">
-           <form action="" class="input"  data-form>
+           <form action="" class="form"  data-form>
             <input class="input" data-input type="text" placeholder="Type something here...">
            </form>            
             <button class="send" data-send>send</button>                 
