--- a/homeworks/Ernest.Myrmyr_ErnestMk1/2-dom/index.html
+++ b/homeworks/Ernest.Myrmyr_ErnestMk1/2-dom/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2-dom</title>
         <link rel="stylesheet" href="./styles.css">
-        <script src="script.js" defer></script>
     </head>
 
     <body>
@@ -19,33 +18,35 @@
                     <li>Am</li>
                     <li>Newbie</li>
                 </ul>
+
+                <form
+                method="get"
+                name='formToSubmit'
+                data-form
+                >
+                    <div class="bottom-area">
+                        <div class="area-block">
+                            <input
+                                data-text
+                                name="area"
+                                type='text'
+                                class="input"
+                                placeholder="Message"
+                                required
+                            ></input>
+                        </div>
+
+                        <div class="button-block">
+                            <input
+                            class="send-button"
+                            data-button
+                            type='submit'
+                            ></input>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-            <form
-              method="get"
-              name='formToSubmit'
-              data-form
-            >
-                <div class="bottom-area">
-                    <div class="area-block">
-                        <input
-                            data-text
-                            name="area"
-                            type='text'
-                            class="input"
-                            placeholder="Message"
-                        ></input>
-                    </div>
-
-                    <div class="button-block">
-                        <input
-                          class="send-button"
-                          data-button
-                          type='submit'
-                        ></input>
-                    </div>
-                </div>
-            </form>
         </div>
+        <script src="script.js" defer></script>
     </body>
 </html>
