--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
    <div class="container">
-       <main class="main" data-main></main>
+       <main class="main" data-main>
+        <template data-post-template>            
+            <p class="message" data-post-p></p>
+          </template>
+       </main>
        <footer class="footer">
            <form action="" class="form"  data-form>
             <input class="input" data-input type="text" placeholder="Type something here...">
