correction of class name

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <div class="divMessages">
+    <main class="basis">
+        <div class="messages">
         </div>
-        <div class="blockSend">
-                <input class="inputMessage" type="text" placeholder="Massage">
-                <button class="btnSend" type="button"><strong>Send</strong></button>
+        <div class="blockS-send">
+                <input class="input-message" type="text" placeholder="Massage">
+                <button class="btn-send" type="button"><strong>Send</strong></button>
         </div>
         
     </main>
