--- a/homeworks/vasil.tanashchuk_vtanaschuk/2-dom/index.html
+++ b/homeworks/vasil.tanashchuk_vtanaschuk/2-dom/index.html
@@ -6,10 +6,10 @@
 <body>
 <div class="row">
   <div class="message-window" data-message-otput>
-    <template data-post-template>
-      <article class="message">
-        <h2 data-post-title></h2>
-      </article>
+    <template data-message-template>
+      <div class="message">
+        <span data-message-text></span>
+      </div>
     </template>
   </div>
   <form class="message-input-block" data-message-form>
