fix remove button

--- a/homeworks/roman.kushnirenko_skyprog/2-dom/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/2-dom/index.html
@@ -26,6 +26,7 @@
                 <textarea class="chat-form_input" data-text-input name="post_text"
                     placeholder="Enter message..."></textarea>
                 <button type='submit' class='chat-form_submit' data-text-submit>Send</button>
+            </form>
         </section>
     </main>
 
