--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main class="basis">
-        <div class="messages">
+        <div class="messages" data-info="chat-out-message">
         </div>
-        <div class="blockS-send">
-                <input class="input-message" type="text" placeholder="Massage">
-                <button class="btn-send" type="button"><strong>Send</strong></button>
+        <div class="block-send">
+                <input class="input-message" type="text" data-info="chat-input-message" placeholder="Massage">
+                <button class="btn-send" type="button" data-rule="button-click"><strong>Send</strong></button>
         </div>
         
     </main>
