fix bugs from m

--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/2-dom/index.html
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/2-dom/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="message-wrapper">
-            <ul class="message-list">
+        <div class="message-wrapper" data-wrapper>
+            <ul class="message-list" data-message-list>
             </ul>
         </div>
-        <footer class="footer-wrapper">
-            <input type="text" placeholder="Write your message" class="input">
-            <button class="send-message-btn">Send</button>
-        </footer>
+        <form class="footer-wrapper" data-form>
+            <input type="text" placeholder="Write your message" class="input" data-input>
+            <button class="send-message-btn" data-btn>Send</button>
+        </form>
     </div>
     <script src="index.js"></script>
 </body>
