--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
@@ -11,10 +11,10 @@
     <main class="basis">
         <div class="messages" data-info="chat-out-message">
         </div>
-        <div class="block-send">
+        <form class="block-send" data-form="chat-control">
                 <input class="input-message" type="text" data-info="chat-input-message" placeholder="Massage">
                 <button class="btn-send" type="button" data-rule="button-click"><strong>Send</strong></button>
-        </div>
+        </form>
         
     </main>
     <script src="script.js"></script>
