--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
@@ -20,7 +20,7 @@
                     <option value="Sort A-Z">Sort A-Z</option>
                     <option value="Sort Z-A">Sort Z-A</option>
                 </select>
-                <input type="text" class="blog-filter" data-blog-filter>
+                <input type="text" placeholder="Filter" class="blog-filter" data-blog-filter>
             </div>
         </header>
         <main class="blog-main-block" data-blog-main></main>
