--- a/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
@@ -19,7 +19,8 @@
             <div class="actions-container">
                 <form class="actions-container__filter-form" onsubmit='return false'
                     data-post-filter>
-                    <input type="text" name="" id=""
+                    <input type="text"
+                    placeholder="Type in some text..."
                         class="actions-container__filter-control"
                         data-post-filter-control>
                 </form>
