changed button inner text and class

--- a/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
@@ -17,15 +17,12 @@
                 Posts
             </h1>
             <div class="actions-container">
-                <form class="actions-container__filter-form" onsubmit='return false'
-                    data-post-filter>
-                    <input type="text"
-                    placeholder="Type in some text..."
-                        class="actions-container__filter-control"
+                <form class="actions-container__filter-form" onsubmit='return false' data-post-filter>
+                    <input type="text" placeholder="Type in some text..." class="actions-container__filter-control"
                         data-post-filter-control>
                 </form>
-                <button class="actions-container__button actions-section__button button button--switch"
-                    data-button-sort>Switch<i class="button__icon fas fa-sort-amount-up-alt"
+                <button class="actions-container__button actions-section__button button button--sort"
+                    data-button-sort>Sort<i class="button__icon fas fa-sort-amount-up-alt"
                         data-button-sort-icon></i></button>
             </div>
         </header>
