Loud JSON and out in blog

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
@@ -23,7 +23,11 @@
                 <input type="text" placeholder="Filter" class="blog-filter" data-blog-filter>
             </div>
         </header>
-        <main class="blog-main-block" data-blog-main></main>
+        <main class="blog-main-block" data-blog-main>
+            <ul class="out-blog-msg" data-blog-msg>
+                <!-- <ol class="blog-msg"></ol> -->
+            </ul>
+        </main>
     </section>
     <script src="script.js"></script>
 </body>
