Load JSON fix bug

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
@@ -17,16 +17,14 @@
             <div class="blog-manipulation">
                 <select name="Sort" class="blog-sort" data-blog-sort>
                     <option value="Sort">Sort</option>
-                    <option value="Sort A-Z">Sort A-Z</option>
-                    <option value="Sort Z-A">Sort Z-A</option>
+                    <option value="Sort A-Z" data-sort-az>A-Z</option>
+                    <option value="Sort Z-A" data-sort-za>Z-A</option>
                 </select>
                 <input type="text" placeholder="Filter" class="blog-filter" data-blog-filter>
             </div>
         </header>
         <main class="blog-main-block" data-blog-main>
-            <ul class="out-blog-msg" data-blog-msg>
-                <!-- <ol class="blog-msg"></ol> -->
-            </ul>
+            <ul class="out-blog-msg" data-blog-msg></ul>
         </main>
     </section>
     <script src="script.js"></script>
