--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="loader">
+    <div class="loader_inner"></div>
+</div>
 <main class="main-content">
     <header class="header">
         <h1 class="site-title">Blog</h1>
