fixed template element formating

--- a/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
@@ -33,8 +33,9 @@
                 <h2 class="post__title" data-post-title></h2>
                 <p class="post__body" data-post-body></p>
                 <div class="post__footer" data-post-footer>
-                    <button class="post__button button button--delete" data-delete-button><i
-                            class="button__icon fas fa-trash-alt fa-2x" data-delete-button-icon></i></button>
+                    <button class="post__button button button--delete" data-delete-button>
+                        <i class="button__icon fas fa-trash-alt fa-2x" data-delete-button-icon></i>
+                    </button>
                 </div>
             </article>
         </template>
